# VideoGenerationMCP

./: .env.example  .gitignore  CONTRACT.md  README.md  pyproject.toml
docs/specs/2026-06-17-seedance-duration-4-15/: spec.claude.md  spec.human.md
samples/: payloads.md
scripts/: demo_bvac.py  demo_kling.py
tests/: test_assets.py  test_captions.py  test_carrier.py  test_carrier_bvac.py  test_client_elevenlabs.py  test_client_piapi.py  test_content_gate.py  test_media.py  test_moderation.py  test_music.py  test_narration.py  test_obsidian.py  test_qa.py  test_references.py  test_routing.py  test_schemas_elevenlabs.py  test_schemas_kling.py  test_schemas_seedance.py  test_scribe.py  test_server.py  test_tools_elevenlabs.py  test_tools_kling.py  test_tools_misc.py  test_tools_seedance.py  test_transliterate.py  test_uploader.py
video_mcp/: __init__.py  config.py  content_gate.py  errors.py  logging_config.py  moderation.py  qa.py  routing.py  server.py
video_mcp/clients/: elevenlabs.py  piapi.py
video_mcp/schemas/: common.py  elevenlabs.py  kling.py  media.py  seedance.py
video_mcp/tools/: __init__.py  assets.py  captions.py  elevenlabs.py  kling.py  media.py  misc.py  seedance.py  seedance_flf.py
video_mcp/utils/: captions.py  carrier.py  download.py  duration.py  llm.py  media.py  obsidian.py  references.py  transliterate.py  uploader.py
