[project]
name = "video-generation-mcp"
version = "0.1.0"
description = "FastMCP server for Kling Omni, Seedance 2, and ElevenLabs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.27",
    "numpy>=2.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-bidi>=0.6.10",
]

[project.scripts]
video-mcp = "video_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["video_mcp"]
